--- a/src/c/CudaImageProcessor.vcxproj
+++ b/src/c/CudaImageProcessor.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="Cuda\CommandLineProgress.h" />
     <ClInclude Include="Cuda\CudaDeviceInfo.h" />
     <ClInclude Include="Cuda\CudaDeviceStats.h" />
+    <ClInclude Include="Cuda\CudaMinFilter.cuh" />
     <ClInclude Include="Cuda\CudaUtilities.h" />
     <ClInclude Include="Cuda\CWrappers.h" />
     <ClInclude Include="Cuda\Defines.h" />
