--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -103,6 +103,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexDeviceCount.cpp" />
     <ClCompile Include="Mex\MexDeviceStats.cpp" />
     <ClCompile Include="Mex\MexMaxFilter.cpp" />
+    <ClCompile Include="Mex\MexMinFilter.cpp" />
     <ClCompile Include="Mex\ScopedProcessMutex.cpp" />
   </ItemGroup>
   <ItemGroup>
