Added more template code to help future extensions

--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -106,6 +106,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexMaxFilter.cpp" />
     <ClCompile Include="Mex\MexMinFilter.cpp" />
     <ClCompile Include="Mex\ScopedProcessMutex.cpp" />
+    <None Include="Mex\_TemplateMex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mex\CudaMex.def" />
