--- a/src/c/CudaImageProcessor.vcxproj
+++ b/src/c/CudaImageProcessor.vcxproj
@@ -120,12 +120,16 @@
     <ClCompile Include="Cuda\GaussianKernel.cpp" />
     <ClCompile Include="Cuda\ImageChunk.cpp" />
     <ClCompile Include="Cuda\LoGKernel.cpp" />
+    <ClInclude Include="Cuda\SeparableMultiplySum.cuh">
+      <FileType>CppCode</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cuda\CHelpers.h" />
     <ClInclude Include="Cuda\CommandLineProgress.h" />
     <ClInclude Include="Cuda\CudaDeviceInfo.h" />
     <ClInclude Include="Cuda\CudaDeviceStats.h" />
+    <ClInclude Include="Cuda\CudaGaussian.cuh" />
     <ClInclude Include="Cuda\CudaMinFilter.cuh" />
     <ClInclude Include="Cuda\CudaMultiplySum.cuh" />
     <ClInclude Include="Cuda\CudaUtilities.h" />
@@ -149,7 +153,6 @@
     <ClInclude Include="Cuda\CudaImageContainerClean.cuh">
       <FileType>Document</FileType>
     </ClInclude>
-    <None Include="Cuda\CudaImageProcessor.def" />
     <CudaCompile Include="Cuda\CudaMaxFilter.cuh">
       <FileType>Document</FileType>
     </CudaCompile>
