--- a/src/c/CudaMex.vcxproj
+++ b/src/c/CudaMex.vcxproj
@@ -106,6 +106,7 @@ copy $(OutDir)CudaMex.dll "$(ProjectDir)Mex.mexw64"</Command>
     <ClCompile Include="Mex\MexGaussian.cpp" />
     <ClCompile Include="Mex\MexKernel.cpp" />
     <ClCompile Include="Mex\MexMaxFilter.cpp" />
+    <ClCompile Include="Mex\MexMeanFilter.cpp" />
     <ClCompile Include="Mex\MexMinFilter.cpp" />
     <ClCompile Include="Mex\MexMultiplySum.cpp" />
     <ClCompile Include="Mex\MexOpener.cpp" />
